<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/LayoutMain"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/selectTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jameel_noori_nastaleeq"
        android:text="@string/selectZikr"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toBottomOf="@+id/selectTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="8dp" />

    <TextView
        android:id="@+id/zikrTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jameel_noori_nastaleeq"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246dp"
        android:layout_height="264dp"
        android:contentDescription="@string/zikr"
        android:src="@drawable/counter_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countingTxt"
        android:layout_width="77dp"
        android:layout_height="98dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/jameel_noori_nastaleeq"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_background"
        android:drawableStart="@drawable/reset"
        android:drawablePadding="10dp"
        android:fontFamily="@font/jameel_noori_nastaleeq"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/reset"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/jameel_noori_nastaleeq"
            android:text="@string/beep"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/onBeepEditTxt"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:lines="2"
            android:gravity="center"
            android:hint="@string/_0"
            android:inputType="number"
            android:singleLine="true"
            android:importantForAutofill="no" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>